cmake_minimum_required(VERSION 3.15)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode main.cpp)
add_executable(difference_of_string difference_of_string.cpp)
add_executable(valid_parenthesis valid_parenthesis.cpp)
add_executable(triplet_sum triplet_sum.cpp)
add_executable(longest_paliandrome longest_paliandrome.cpp)
add_executable(word_ladder word_ladder.cpp)